# TickTacToe

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Pipfile  README.md  TickTacToe.pro  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  opponent.cpp  opponentrandom.cpp  opponentrandom.h  pyproject.toml  scoreboard.cpp  scoreboard.h  tileboard.cpp  tileboard.h  tilebutton.cpp  tilebutton.h
.github/workflows/: build_checks.yml  release.yml
include/: mainwindow.h  scoreboard.h  tileboard.h  tilebutton.h
include/opponent/: opponent.h  opponentrandom.h
src/: main.cpp  mainwindow.cpp  scoreboard.cpp  tileboard.cpp  tilebutton.cpp
src/opponent/: opponent.cpp  opponentrandom.cpp
