[tool.poetry]
name = "ticktactoe"
version = "0.1.0"
description = ""
authors = ["SheyDenis <denis.sheyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
conan = "^2.0.14"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
